# qG3Point

./: CMakeLists.txt  LICENCE.txt  README.md  info.json  qG3POINT.qrc
include/: ActionA.h  AnglesCustomPlot.h  CMakeLists.txt  G3Point.h  G3PointAction.h  G3PointDialog.h  G3PointDisclaimer.h  G3PointPlots.h  G3PointPlugin.h  GrainsAsEllipsoids.h  WolmanCustomPlot.h  qG3PointDialog.h  qG3PointDisclaimer.h
shaders/: DrawGrains.fs  DrawGrains.gs  DrawGrains.gs.old  DrawGrains.vs  DrawGrains_BACKUP.fs  DrawGrains_BACKUP.vs  ellipsoid.fs  ellipsoid.vs
src/: ActionA.cpp  AnglesCustomPlot.cpp  CMakeLists.txt  G3Point.cpp  G3PointAction.cpp  G3PointDialog.cpp  G3PointDisclaimer.cpp  G3PointPlots.cpp  G3PointPlugin.cpp  GrainsAsEllipsoids.cpp  WolmanCustomPlot.cpp  qG3PointDialog.cpp  qG3PointDisclaimer.cpp
ui/: AnglesCustomPlot.ui  CMakeLists.txt  G3PointDialog.ui  G3PointDisclaimer.ui  G3PointPlots.ui  WolmanCustomPlot.ui  qG3PointDialog.ui  qG3PointDisclaimer.ui
